# Smartbike

./: .gitignore  Instrucciones_GITHUB.txt  README.md  log.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  delantero.c  delantero.h  delantero.h.txt  icon_heart.c  icon_heart.c.txt  icon_heart.h  lvgl_port.c  lvgl_port.h  main.c  trasero.c  trasero.h  ui_training.c  ui_training.h  waveshare_rgb_lcd_port.c  waveshare_rgb_lcd_port.h
